--- a/.github/workflows/deploy-flowmeasures.yml
+++ b/.github/workflows/deploy-flowmeasures.yml
@@ -7,6 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    - name: Create and populate config.json
+    - uses: jsdaniell/create-json@v1.2.3
+      with:
+        name: "VacdmDataFaker.FlowMeasures/config.json"
+        json: ${{ secrets.JSON }}
+      
     
     - name: Build the Docker image
       working-directory: VacdmDataFaker.FlowMeasures
