--- a/VacdmDataFaker.Vacdm/Dockerfile
+++ b/VacdmDataFaker.Vacdm/Dockerfile
@@ -10,4 +10,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app/out .
 ENV ASPNETCORE_URLS=http://*:80
-CMD dotnet Api.dll
+CMD dotnet VacdmDataFaker.Vacdm.dll
