Add VacdmDataFaker.Shared, Additions to Env/Config,

--- a/VacdmDataFaker.Vacdm/VacdmDataFaker.Vacdm.csproj
+++ b/VacdmDataFaker.Vacdm/VacdmDataFaker.Vacdm.csproj
@@ -17,4 +17,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VacdmDataFaker.Shared\VacdmDataFaker.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
