--- a/VacdmDataFaker.FlowMeasures/VacdmDataFaker.FlowMeasures.csproj
+++ b/VacdmDataFaker.FlowMeasures/VacdmDataFaker.FlowMeasures.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,6 +14,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VacdmDataFaker.Shared\VacdmDataFaker.Shared.csproj" />
   </ItemGroup>
 
 </Project>
